@@ -3151,6 +3151,8 @@ When used with {-lu':v}, this prefix means "Someone (indefinite subject) does so
 
 To begin searching, simply press the "Search" (magnifying glass) button and type into the search box.
 
+To hear the sounds of Klingon, you need to install a {Text-To-Speech engine:url:https://play.google.com/store/apps/details?id=org.tlhInganHol.android.klingonttsengine}.
+
 It is recommended to install the {Klingon Keyboard for ASK:url:https://play.google.com/store/apps/details?id=com.anysoftkeyboard.languagepack.klingon}. Otherwise, to make it easier to type Klingon on a mobile keyboard, the following shorthand (called "xifan hol") can be enabled under the Preferences menu:
     c ▶ {ch:sen:nolink} / d ▶ {D:sen:nolink} / f ▶ {ng:sen:nolink} / g ▶ {gh:sen:nolink} / h ▶ {H:sen:nolink} /
     i ▶ {I:sen:nolink} / k ▶ {Q:sen:nolink} / s ▶ {S:sen:nolink} / x ▶ {tlh:sen:nolink} / z ▶ {':sen:nolink}
