@@ -259,7 +259,7 @@
 
     <!-- Strings for the ShowcaseView tutorial. -->
     <string name="tutorial_1_title">qavan! (I salute you!)</string>
-    <string name="tutorial_1_msg">This tutorial gives a brief overview of boQwI\'.\n\n* Latest changes *\n2014-11-12: geometry and card game terms.\n2014-10-23: TTS integration.</string>
+    <string name="tutorial_1_msg">This tutorial gives a brief overview of boQwI\'.\n\n* Latest changes *\n2014-11-16: new vocab from qepHom\'a\' 2014.\n2014-10-23: Text-To-Speech integration.</string>
     <string name="tutorial_2_title">Search</string>
     <string name="tutorial_2_msg">Use this to search the database. You can search using Klingon or English.</string>
     <string name="tutorial_3_title">Resources</string>
@@ -269,7 +269,7 @@
     <string name="tutorial_5_title">Other features</string>
     <string name="tutorial_5_msg">Use the menu button to access other features.</string>
     <string name="tutorial_6_title">Even more features</string>
-    <string name="tutorial_6_msg">Want to hear what a Klingon word or phrase sounds like? Use the "speak" button. (Requires Klingon TTS engine.)\n\nReading a long text in Klingon (like Hamlet)? Activate float mode, and boQwI\' will hover over your browser, email, or ebook reader.</string>
+    <string name="tutorial_6_msg">Want to hear what a Klingon word or phrase sounds like? Use the "speak" button. (Requires Klingon Text-To-Speech engine.)\n\nReading a long text in Klingon (like Hamlet)? Activate float mode, and boQwI\' will hover over your browser, email, or ebook reader.</string>
     <string name="tutorial_7_title">Qapla\'! (Success!)</string>
     <string name="tutorial_7_msg">For advanced users, there are more settings under the Preferences menu.</string>
 </resources>
